--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,6 +19,11 @@ jobs:
         with:
           go-version: "1.23.1"
 
+      - name: Install dependencies (libpcap-dev)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libpcap-dev
+
       - name: Cache Go modules
         uses: actions/cache@v3
         with:
@@ -33,6 +38,6 @@ jobs:
       - name: Build
         run: go build ./...
 
-      # Uncomment the next step if you want to run tests, too.
+      # Uncomment for tests if desired:
       # - name: Test
       #   run: go test ./... -v
