--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -37,7 +37,5 @@ jobs:
 
       - name: Build
         run: go build ./...
-
-      # Uncomment for tests if desired:
-      # - name: Test
-      #   run: go test ./... -v
+      - name: Test
+        run: go test ./... -v
